another way to make primary caret offset available lock-free in background (to speedup ShowIntentionPass.availableFor)
without making setCaretsAndSelections/removeSecondaryCarets slower